Finished all API, refactor codebase for better maintainability, Adjust OpenAPI and rebuilt docs
