# _backend/utils.js
@@ -1,5 +1,9 @@
-//JSend specification
 const jwt = require("jsonwebtoken");
+const path = require("path");
+
+function assetsPath(file) {
+  return path.join("/assets", file);
+}
 
 function auth(req, res, next) {
   const authHeader = req.header("Authorization");
@@ -16,12 +20,19 @@ function auth(req, res, next) {
     if (err) return res.status(400).fail(err);
 
     const user = {
-      id: decoded?.id,
+      id: decoded?.user_id,
     };
 
     req.user = user;
     next();
   });
+}
+
+function isAuth(req, res, next) {
+  if (req.user) {
+    return next();
+  }
+  res.status(401).fail("Unauthorized");
 }
 
 const multer = require("multer");
@@ -38,9 +49,42 @@ const upload = multer({
   storage,
 });
 
+const video = multer({
+  storage,
+  fileFilter: function (_, file, callback) {
+    const ext = path.extname(file.originalname);
+    if (ext !== ".mp4" && ext !== ".webp") {
+      return callback(
+        new Error("Accepted video only, these format are supported mp4, webp")
+      );
+    }
+    callback(null, true);
+  },
+});
+
+const photo = multer({
+  storage,
+  fileFilter: function (_, file, callback) {
+    const ext = path.extname(file.originalname);
+    if (ext !== ".png" && ext !== ".jpg" && ext !== ".jpeg") {
+      return callback(
+        new Error(
+          "Accepted image only, these format are supported png, jpg, jpeg"
+        )
+      );
+    }
+    callback(null, true);
+  },
+});
+
 function error(err, req, res, next) {
-  const code = req.status || 500;
-  res.status(code).error(err?.message || "Unexpected error");
+  if (err) {
+    const code = req.status || 500;
+    res.status(code);
+    res.error(err?.message || "Unexpected error");
+  } else {
+    next();
+  }
 }
 
 function responser(req, res, next) {
@@ -72,4 +116,13 @@ function responser(req, res, next) {
   next();
 }
 
-module.exports = { responser, upload, error, auth };
+module.exports = {
+  responser,
+  upload,
+  video,
+  photo,
+  error,
+  auth,
+  isAuth,
+  assetsPath,
+};
